# quick-profile

./: CMakeLists.txt  README.md  to-graph.py
src/: profile.cpp  profile.hpp  quick-profile.hpp
